--- a/package.json
+++ b/package.json
@@ -1,16 +1,1 @@
-{
-  "name": "nutrismart-site",
-  "version": "1.0.0",
-  "description": "Website para Nutricionista Jacqueline Santana",
-  "main": ".eleventy.js",
-  "scripts": {
-    "start": "npx @11ty/eleventy --serve",
-    "build": "npx @11ty/eleventy"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@11ty/eleventy": "^2.0.1"
-  }
-}
+ARQUIVO: package.json
